# MyBible

./: .gitignore  README.md  pyproject.toml  references.md  test_output.md
.github/workflows/: lint.yml  tests.yml
claude/: CLI_IMPROVEMENTS.md  TEST_README.md
copilot/: CITATION_GRAPH.md  FILES_MODIFIED.md  GOOGLE_SCHOLAR_README.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  QUICKSTART.md
pkg/mybib/: __init__.py  arxiv.py  bibtex.py  categories.py  citation.py  cli.py  db_storage.py  graph.py  main.py  markdown.py  metadata.py  models.py  repo.py  scholar.py  storage.py  ui.py  utils.py
tests/: README.md  __init__.py  test_arxiv.py  test_bibtex.py  test_citation.py  test_cli.py  test_markdown.py  test_metadata.py  test_repo.py  test_storage.py
