[project]
name = "mybible"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "tabulate>=0.10.0",
]

[tool.setuptools]
package-dir = {"" = "./pkg/"}

[tool.setuptools.packages.find]
where = ["pkg"]

[tool.uv]
managed = true
package = true

[project.scripts]
mybib = "pkg.mybib.cli:main"