[project]
name = "mybible"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "tabulate>=0.10.0",
    "networkx>=3.0",
    "pyvis>=0.3.2",
    "rich>=13.0.0",
]

[tool.setuptools]
package-dir = {"" = "./pkg/"}

[tool.setuptools.packages.find]
where = ["pkg"]

[tool.uv]
managed = true
package = true

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
mybib = "mybib.cli:main"